# chargepoint-load-analysis

./: .dockerignore  .gitignore  CLAUDE.md  README.md  debug.ipynb  docker-compose.jupyter.yaml  dockerfile  explore.ipynb  github-ci.yml  main.py  pyproject.toml  requirements.txt  train_model.py  utils.py
.claude/skills/: Dockerfile-building-instruction.md  data-engineer.md
data/metadata/: 20260515_190346_3400a811.json  20260518_011926_d4b20816.json  20260529_004922_a12c2e81.json  20260529_004922_a12c2e81_clean.json  cps_sessions_clean_report.json
data/processed/: 20260515_190346_3400a811_result.parquet  20260518_011926_d4b20816_result.parquet  20260529_004922_a12c2e81_result.parquet  cp_clusters.parquet  pressure_index.parquet
data/raw/: 20260515_190346_3400a811.parquet
data/reference/: charge_points.parquet  ocm_scotland.parquet  site_geocode_cache.json
docs/: HARVESTER_DEVELOPMENT_NOTES.md  contracts.md  etl-decisions.md  model-decisions.md  postcode-dq-runbook.md
src/: build_charge_points.py  build_cp_table.py  cleaner.py  cleaner_cps.py  cluster_profiles.py  dashboard.py  dq_postcodes.py  enrich_connectors.py  features.py  geocode_sites.py  harvest_cps.py  harvest_locations.py  harvester.py  pressure_index.py  setup.sql  site_pressure.py  train_model.py  utils.py
