[tool.poetry]
name = "chargepoint-load-analysis"
version = "0.1.0"
description = "Production-grade machine learning pipeline analysing EV charging session data to model infrastructure load and identify regions under high charging demand pressure across Scotland."
package-mode = false

authors = ["Lee Kang Jie"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.3.3"
numpy = "^2.3"
scikit-learn = "^1.8.0"
xgboost = "^3.2.0"
streamlit = "^1.57.0"
python-dotenv = "^1.2.2"
plotly = "^6.7.0"
streamlit-folium = "^0.27.2"
pyiceberg = "^0.11.1"
folium = "^0.20.0"
ipykernel = "^7.2.0"
ydata-profiling = "^4.18.4"
setuptools = "<74"
ipywidgets = "^8.1.8"
requests = "^2.34.2"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
