[tool.poetry]
name = "chargepoint-load-analysis"
version = "0.1.0"
description = "Production-grade machine learning pipeline analysing EV charging session data to model infrastructure load and identify regions under high charging demand pressure across Scotland."
package-mode = false

authors = ["Lee Kang Jie"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
pandas = "^2.3.3"
numpy = "^2.3"
streamlit = "^1.57.0"
python-dotenv = "^1.2.2"
plotly = "^6.7.0"
pydeck = "^0.9.2"
requests = "^2.34.2"
openpyxl = "^3.1.5"
beautifulsoup4 = "^4.12.0"
python-dateutil = "^2.8.2"
tenacity = "^8.2.0"
databricks-sql-connector = "^4.2.6"
anthropic = "^0.109.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)"
]
